--- a/src/main/resources/templates/board/post.html
+++ b/src/main/resources/templates/board/post.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>post</title>
+    <script type="text/javascript">
+        document.
+    </script>
 </head>
 <body>
-
+<h1 th:text="${post.title}"></h1>
+<p th:text="${post.description}">desc</p>
+<a th:href="@{/posts}">Go List</a>
 </body>
 </html>
